--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
-<!DOCTYPE html">
-<html>
-<head>      
-<link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Responsive Navbar</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
 </head>
 <body>
-    
     <header>
-        <nav>
-
-            <ul class="navlinks">
-            <li ><a href="index.html" ><strong>Home</strong></a></li>
-            <li><a href="mostpopular.html" class="four"><strong>Most-Popular</strong></a></li>   
-            <li><a href="page2.html" class="four" style="font-family: Poppins"><strong>Add-Yourself</strong></a></li>
-            </ul>
-        </nav>
-</header>
-<main>
-    <button class="btn1"> </button>
-</main>
-
+    <nav class="main-nav">
+        <input type="checkbox" id="check" />
+        <label for="check" class="menu-btn">
+        <i class="fas fa-bars"></i>
+        </label>
+        <a href="index.html" class="logo">Water.inc</a>
+        <ul class="navlinks">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#" class="contact">Order now</a></li>
+        </ul>
+    </nav>
+    </header>
+    <main>
+        <div class="h-500 center-v center-h">
+        <button> H</button>
+    </div></main>
 </body>
 </html>
