--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Navbar</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+    <script src="amin.js"></script>
 </head>
 <body>
     <header>
@@ -17,16 +18,26 @@
         </label>
         <a href="index.html" class="logo">Water.inc</a>
         <ul class="navlinks">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#" class="contact">Order now</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="order.html" class="contact">Order now</a></li>
         </ul>
     </nav>
     </header>
     <main>
+        <br>
+        <br>
+        <br>
         <div class="h-500 center-v center-h">
-        <button> H</button>
+        <button onclick="amin()" style="
+        padding-bottom: 92px;
+        border-bottom-width: 0px;
+        margin-bottom: 0px;
+        padding-top: 81px;
+        width: 201px;
+        font-size:30px;
+        font-family:Montserrat, sans-serif">Click Me</button>
     </div></main>
 </body>
 </html>
