--- a/index.html
+++ b/index.html
@@ -30,14 +30,12 @@
         <br>
         <br>
         <div class="h-500 center-v center-h">
-        <button onclick="amin()" style="
-        padding-bottom: 92px;
-        border-bottom-width: 0px;
-        margin-bottom: 0px;
-        padding-top: 81px;
-        width: 201px;
-        font-size:30px;
-        font-family:Montserrat, sans-serif">Click Me</button>
-    </div></main>
+        <button onclick="amin()" class="clickme"style="background-color:linear-gradient(to left, red, blue )"
+        >Click Me</button>
+    </div>
+<section>
+hey
+</section>
+</main>
 </body>
 </html>
