--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <label for="check" class="menu-btn">
         <i class="fas fa-bars"></i>
         </label>
-        <a href="index.html" class="logo">Water.inc</a>
+        <a href="index.html" class="logo" style="font-family :Montserrat, sans-serif">Water driver</a>
         <ul class="navlinks">
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -30,11 +30,11 @@
         <br>
         <br>
         <div class="h-500 center-v center-h">
-        <button onclick="amin()" class="clickme"style="background-color:linear-gradient(to left, red, blue )"
+        <button onclick="amin()" class="clickme"style="color=white"
         >Click Me</button>
     </div>
 <section>
-hey
+we deliver water to you house
 </section>
 </main>
 </body>
