--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <label for="check" class="menu-btn">
         <i class="fas fa-bars"></i>
         </label>
-        <a href="index.html" class="logo">Water.inc</a>
+        <a href="index.html" class="logo" class="wtrdriver">Water driver</a>
         <ul class="navlinks">
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
