--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <br>
         <br>
         <div class="h-500 center-v center-h">
-        <button onclick="amin()" class="clickme"style="color=white"
+        <button onclick="amin()" class="clickme"style="color:white"
         >Click Me</button>
     </div>
 <section>
