--- a/index.html
+++ b/index.html
@@ -28,14 +28,10 @@
     <main>
         <br>
         <br>
-        <br>
         <div class="h-500 center-v center-h">
-        <button onclick="amin()" class="clickme"style="color:white"
-        >Click Me</button>
+        <button onclick="amin()" class="clickme"style="color:white">Click Me</button>
     </div>
-<section>
-we deliver water to you house
-</section>
+
 </main>
 </body>
 </html>
