--- a/index.html
+++ b/index.html
@@ -26,11 +26,44 @@
     </nav>
     </header>
     <main>
-        <br>
-        <br>
-        <div class="h-500 center-v center-h">
-        <button onclick="amin()" class="clickme"style="color:white">Click Me</button>
-    </div>
+        <section class="hero">
+            <div class="hero-content">
+            <h1 class="hero-title">
+                botted water and more, delivered to your door
+            </h1>
+            <div type="button" class="hero-button" style="width: 328px;">
+                <button shape="circle" style="
+                height: 40px;
+                width: 41px;
+                border-radius: 100px;
+                margin-top: 1%;
+                margin-left: 0px;
+                margin-right: -px;
+                border:none
+            "></button>  <input type="search" placeholder="Enter delivery address" style="
+    height: 39px;
+    margin-top: 5px;
+    margin-bottom: 0px;
+    width: 218px;
+    padding-top: 27px;
+    border-top-width: 0px;
+    border-right-width: 0px;
+    padding-right: 0px;
+">
+            <button shape="circle" style="
+            height: 40px;
+            width: 41px;
+            border-radius: 100px;
+            margin-top: 1%;
+            margin-right: 0px;
+            border-left-width: 0px;
+            padding-left: px;
+            margin-left: 0px;
+            border:none
+        "></button>  
+
+            </div>
+        </section>
 
 </main>
 </body>
