--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 class="hero-title">
                 botted water and more, delivered to your door
             </h1>
-            <div type="button" class="hero-button" style="width: 328px;">
+            <div type="button" class="hero-button" style="display:flex , width= 280px;display:flex;margin-left: 47px;border-left-width: 0px;height: 50px;padding-left: 0px;">
                 <button shape="circle" style="
                 height: 40px;
                 width: 41px;
@@ -42,13 +42,18 @@
                 border:none
             "></button>  <input type="search" placeholder="Enter delivery address" style="
     height: 39px;
-    margin-top: 5px;
+    margin-top: 0px;
     margin-bottom: 0px;
-    width: 218px;
-    padding-top: 27px;
+    width: 221px;
+    padding-top: 0px;
     border-top-width: 0px;
     border-right-width: 0px;
     padding-right: 0px;
+    padding-bottom: 0px;
+    font-size: 14px;
+    border-bottom-width: 0px;
+    padding-left: 0px;
+    border-left-width: 0px;
 ">
             <button shape="circle" style="
             height: 40px;
