--- a/index.html
+++ b/index.html
@@ -28,46 +28,14 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-            <h1 class="hero-title">
+            <h1 class="titleline">
                 botted water and more, delivered to your door
             </h1>
-            <div type="button" class="hero-button" style="display:flex , width= 280px;display:flex;margin-left: 47px;border-left-width: 0px;height: 50px;padding-left: 0px;">
-                <button shape="circle" style="
-                height: 40px;
-                width: 41px;
-                border-radius: 100px;
-                margin-top: 1%;
-                margin-left: 0px;
-                margin-right: -px;
-                border:none
-            "></button>  <input type="search" placeholder="Enter delivery address" style="
-    height: 39px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    width: 221px;
-    padding-top: 0px;
-    border-top-width: 0px;
-    border-right-width: 0px;
-    padding-right: 0px;
-    padding-bottom: 0px;
-    font-size: 14px;
-    border-bottom-width: 0px;
-    padding-left: 0px;
-    border-left-width: 0px;
-">
-            <button shape="circle" style="
-            height: 40px;
-            width: 41px;
-            border-radius: 100px;
-            margin-top: 1%;
-            margin-right: 0px;
-            border-left-width: 0px;
-            padding-left: px;
-            margin-left: 0px;
-            border:none
-        "></button>  
-
-            </div>
+        <div class="searchbar">
+            <buttom><div><img src="noun-project-462.svg" class="locationimg"></div></buttom>
+            <input type="text" placeholder="Enter delivery address" class="searcher">
+            <buttom><div> <img src="1384651627.svg" style="height: 50px; width: 20px;"></div></buttom>
+        </div>
         </section>
 
 </main>
