--- a/index.html
+++ b/index.html
@@ -38,5 +38,36 @@
         </div>
         </section>
 </main>
+<footer style="background-color:#0C141C;">
+<br>
+    <div style=" text-align: center; display: block">
+<div style="margin-bottom:10px;color: white"> Get to Know Us</div>
+<div style="margin-bottom:5px;color: grey">Who we are</div>
+<div style="margin-bottom:5px;color: grey">Carrers</div>
+<div style="margin-bottom:5px;color: grey">Linkedin</div>
+<div style="margin-bottom:5px;color: grey">Glassdoor</div>
+<div style="margin-bottom:5px;color: grey">Accessiblity</div>
+</div>
+<br>
+<div  style=" text-align: center; display: block">
+<div style="margin-bottom:10px;color: white">Let Us Help You</div>
+<div style="margin-bottom:5px;color: grey ">Account Details</div>
+<div style="margin-bottom:5px;color: grey">Order History</div>
+<div style="margin-bottom:5px;color: grey">Help</div>
+</div>
+<br>
+<div  style=" text-align: center; display: block">
+<div style="margin-bottom:6px;color: white">Social Media</div>
+<div style="display: inline;;color: grey">
+<div><span><img src="" alt=""></span><span>s</span><span>f</span></div>
+</div>
+<br>
+<div style="font-size:12px;justify-content:space-evenly; margin-bottom:5px"><span style="margin-right:8px;margin-left:6px">Terms of Service</span><span style="margin-right:30px ;margin-left:30px;">Privacy</span><span style="margin-right:px ;">Notice At Collection</span></div>
+<div style="font-size:12px;"><span style="margin-right:27px ;margin-left:11px">Delivery Locations</span> <span style="margin-right:8px ;">© 2022 WaterDriver</span></div>
+</div>
+</div>
+<br>
+<div style="justify-content:center; display:flex"><img src="logo.svg" alt="" style="width:218px"></div>
+</footer>
 </body>
 </html>
