--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <script src="amin.js"></script>
 </head>
 <body>
-    <header>
+    <header >
     <nav class="main-nav">
-        <input type="checkbox" id="check" />
+        <input type="checkbox" id="check">
         <label for="check" class="menu-btn">
         <i class="fas fa-bars"></i>
         </label>
-        <a href="index.html" class="logo" style="color: white">Water driver</a>
+        <div style="justify-content:center; display:flex" ><img src="logo.svg" alt="" style="width:218px;margin-top: 11px;margin-left: 33px;"></div>
+        <a href="index.html" class="loo" style="color: white"><img src="logo.svg" alt=""></a>
+        <a href=""><img src="logo.svg" alt=""></a>
         <ul class="navlinks">
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -62,8 +64,8 @@
 <div><span><img src="" alt=""></span><span>s</span><span>f</span></div>
 </div>
 <br>
-<div style="font-size:12px;justify-content:space-evenly; margin-bottom:5px"><span style="margin-right:8px;margin-left:6px">Terms of Service</span><span style="margin-right:30px ;margin-left:30px;">Privacy</span><span style="margin-right:px ;">Notice At Collection</span></div>
-<div style="font-size:12px;"><span style="margin-right:27px ;margin-left:11px">Delivery Locations</span> <span style="margin-right:8px ;">© 2022 WaterDriver</span></div>
+<div style="color: grey;font-size:12px;justify-content:space-evenly; margin-bottom:5px"><span style="margin-right:8px;margin-left:6px">Terms of Service</span><span style="margin-right:30px ;margin-left:30px;">Privacy</span><span style="margin-right:px ;">Notice At Collection</span></div>
+<div style="color: grey;font-size:12px;"><span style="margin-right:27px ;margin-left:11px">Delivery Locations</span> <span style="margin-right:8px ;">© 2022 WaterDriver</span></div>
 </div>
 </div>
 <br>
