--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <i class="fas fa-bars" ></i>
         </label>
         <div style="justify-content:center; display:flex" ><img src="logo.svg" alt="" style="width:218px;margin-top: 11px;margin-left: 33px;"></div>
-        <ul class="navlinks">
+        <ul class="navlinks" style="bottom: 0px;top: 88px;height: 822px;">
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="profile.html">Profile</a></li>
@@ -38,7 +38,7 @@
         </div>
         </section>
 </main>
-<footer style="background-color:#0C141C;">
+<footer style="background-color:#0C141C; margin-bottom:0">
 <br>
     <div style=" text-align: center; display: block">
 <div style="margin-bottom:10px;color: white"> Get to Know Us</div>
