--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <label for="check" class="menu-btn" >
         <i class="fas fa-bars" ></i>
         </label>
-        <div style="justify-content:center; display:flex" ><img src="logo.svg" alt="" style="width:218px;margin-top: 11px;margin-left: 33px;"></div>
+        <div style="justify-content:center; display:flex" ><img src="logo.svg" alt="" style="width:218px;margin-top: 11px;margin-left: 47px;"></div>
         <ul class="navlinks" style="bottom: 0px;top: 88px;height: 822px;">
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -59,8 +59,11 @@
 <div  style=" text-align: center; display: block">
 <div style="margin-bottom:6px;color: white">Social Media</div>
 <div style="display: inline;;color: grey">
-<div><span><img src="" alt=""></span><span>s</span><span>f</span></div>
+<div ><span><img src="facebook.svg" alt=""style="
+    padding-right: 16px;
+"></span><img src="twitter.svg" alt="" style="height:24px; width:24px ;padding-right: 16px;"><span><img src="instagram.svg" alt="" style="height:24px; width:24px"></span></div>
 </div>
+<br>
 <br>
 <div style="color: grey;font-size:12px;justify-content:space-evenly; margin-bottom:5px"><span style="margin-right:8px;margin-left:6px">Terms of Service</span><span style="margin-right:30px ;margin-left:30px;">Privacy</span><span style="margin-right:px ;">Notice At Collection</span></div>
 <div style="color: grey;font-size:12px;"><span style="margin-right:27px ;margin-left:11px">Delivery Locations</span> <span style="margin-right:8px ;">© 2022 WaterDriver</span></div>
