--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 class="titleline">
                 botted water and more, delivered to your door
             </h1>
-        <div class="searchbar">
+        <div class="searchbar"style="margin-left: 16px">
             <buttom><div><img src="noun-project-462.svg" class="locationimg"></div></buttom>
             <input type="text" placeholder="Enter delivery address" class="searcher">
             <buttom><div> <img src="1384651627.svg" style="height: 50px; width: 20px;"></div></buttom>
