--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <i class="fas fa-bars" ></i>
         </label>
         <div style="justify-content:center; display:flex" ><img src="logo.svg" alt="" style="width:218px;margin-top: 11px;margin-left: 47px;"></div>
-        <ul class="navlinks" style="bottom: 0px;top: 88px;height: 822px;">
+        <ul class="navlinks" style="top: 88px;height: 900px;">
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="profile.html">Profile</a></li>
