--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="amin.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header >
@@ -20,9 +20,9 @@
         <i class="fas fa-bars" ></i>
         </label>
         <div style="justify-content:center; display:flex" ><img src="logo.svg" alt="" style="width:218px;margin-top: 11px;margin-left: 47px;"></div>
-        <ul class="navlinks" style="top: 88px;height: 900px;">
+        <ul class="navlinks" style="top: 88px;height: 260rem;">
         <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
         <li><a href="profile.html">Profile</a></li>
         <li><a href="order.html" class="contact">Order now</a></li>
         </ul>
@@ -48,15 +48,21 @@
         <div style="display:flex;  justify-content:space-around">
         <div>
             <div class="topbox"><img  src="https://o.remove.bg/downloads/7ffb62d9-ca33-4103-9ff1-9898301d0b66/002259243114-removebg-preview.png" class="size"></div>
-            <div><span>Ozarka</span></div>
-            <div> Time</div>
+            <div><span class="name">Ozarka</span></div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
         </div>
         <div>
             <div class="topbox"><img  src="https://o.remove.bg/downloads/58aa1eba-f10f-4f12-8c96-5c48f9b9c911/nestle-water_1-removebg-preview.png" alt="" class="size"></div>
-            <div>Nestle</div>
-            <div> Time</div>
+            <div class="name">Nestle</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
             </div>
@@ -64,15 +70,21 @@
     <div style="display:flex;  justify-content:space-around">
         <div>
             <div class="box"><img  src="https://o.remove.bg/downloads/19e7acc9-0b4c-41ba-abb6-ecad66ddcd8c/b1c9dff0-8291-41e1-b114-fa6ad9314013_1.3b964f7d33b04e15213540a3aadc8080-removebg-preview.png"class="size"></div>
-            <div>Voss</div>
-            <div> Time</div>
+            <div class="name">Voss</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
         </div>
         <div>
             <div class="box"><img  src="https://o.remove.bg/downloads/72751cf2-0fc2-492c-bb36-f10cbc95dceb/GUEST_0414b725-a1d5-4e31-a2d3-b2b8ab19073e-removebg-preview.png"class="size"></div>
-            <div>Dasani</div>
-            <div> Time</div>
+            <div class="name">Dasani</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
             </div>
@@ -80,15 +92,21 @@
     <div style="display:flex;  justify-content:space-around">
         <div>
             <div class="box"><img  src="https://o.remove.bg/downloads/1395469e-aab2-4b78-9288-bb4064a2a468/ad640e6b-c5b3-447e-bbc5-08468341a404.c161c5c5c464ff340f8340ac171b331a-removebg-preview.png"class="size"></div>
-            <div>Aquafina</div>
-            <div> Time</div>
+            <div class="name">Aquafina</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
         </div>
         <div>
             <div class="box"><img  src="https://o.remove.bg/downloads/bbf192d7-e9b2-429f-9281-54f987d4424b/432ef0dc-a233-4867-a8f6-ed5cba5ae54b.cb4d6ed9afb1db8f0fa6a628ddbceab4-removebg-preview.png"class="size"></div>
-            <div>Smart Water</div>
-            <div> Time</div>
+            <div class="name">Smart Water</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
             </div>
@@ -96,15 +114,21 @@
     <div style="display:flex;  justify-content:space-around">
         <div>
             <div class="box"><img  src="https://o.remove.bg/downloads/cbdd1bb5-2ab2-4b8b-be62-f8dacbd2bdbb/dc03389a-57d3-48ad-bce1-7fede7601b58.fe8868ef92b5df3cd4f21b0936eb2108-removebg-preview.png"class="size"></div>
-            <div>Crystal  Geyser</div>
-            <div> Time</div>
+            <div class="name">Crystal  Geyser</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
         </div>
         <div>
             <div class="box"><img  src="https://upload.suggest.com/sg/uploads/2021/07/FW_2021_500ml_900x900_0aaf1681-6cec-4f2f-9692-80400f77e33d_grande.png"class="size"></div>
-            <div>Fiji</div>
-            <div> Time</div>
+            <div class="name">Fiji</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
             </div>
@@ -117,15 +141,21 @@
     <div style="display:flex;  justify-content:space-around">
         <div>
             <div class="topbox"><img  src="https://www.readyrefresh.com/medias/sys_master/images/images/h3a/hce/h00/8929890893854/1410-main-OZARKA-spring-water-5-gallon-bottle-front-large.png"class="size"></div>
-            <div><span>Ozarka</span></div>
-            <div> Time</div>
+            <div><span class="name">Ozarka</span></div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
         </div>
         <div>
             <div class="topbox"><img  src="https://o.remove.bg/downloads/b2908393-a5af-47cb-a8b8-74898a89e6ff/0bc2d930-d9f1-4ca5-923a-a4a313b3cedb.a9000b0f881135d08067693c05be9eb8-removebg-preview.png" alt="" class="size"></div>
-            <div>Nestle</div>
-            <div> Time</div>
+            <div class="name">Nestle</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
             </div>
@@ -133,15 +163,22 @@
     <div style="display:flex;  justify-content:space-around">
         <div>
             <div class="box"><img  src="https://www.readyrefresh.com/medias/sys_master/images/images/ha4/ha9/h00/9021394190366/1196-main-Pure-Life-purified-water-5-Gallon-composite-zoom-variable.png"class="size"></div>
-            <div>Pure Life</div>
-            <div> Time</div>
+            <div class="name">Pure Life</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div> &FREE delivery</div>
             </div>  
             <div>
             <div class="box"><img  src="https://www.readyrefresh.com/medias/sys_master/images/images/h06/he1/h00/8890388971550/1411-main-poland-spring-5-gallon-bottle-composite.png"class="size"></div>
-            <div>Poland Spring</div>
-            <div> Time</div>
+            <div class="name">Poland</div>
+            <div class="name">Spring</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
             </div>
@@ -152,15 +189,21 @@
     <div style="display:flex;  justify-content:space-around">
         <div>
             <div class="box"><img  src="https://o.remove.bg/downloads/43b35d58-72fe-4b12-994a-654ce51e5574/71537flhiRL._SX679_PIbundle-24_TopRight_0_0_AA679SH20_-removebg-preview.png"class="size"></div>
-            <div>Pure life</div>
-            <div> Time</div>
+            <div class="name">Pure life</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
         </div>
         <div>
             <div class="box"><img  src="https://o.remove.bg/downloads/8c136101-1b0b-4659-aed2-a4e89d69790d/81qxPhhANPS._SL1500_-removebg-preview.png"class="size"></div>
-            <div>Nestle</div>
-            <div> Time</div>
+            <div class="name">Nestle</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
             </div>
@@ -168,15 +211,22 @@
     <div style="display:flex;  justify-content:space-around">
         <div>
             <div class="box"><img  src="https://www.readyrefresh.com/medias/sys_master/images/images/h20/hb2/h00/8898119499806/1425-main-poland-spring-singles-8-oz-48-pack-composite-zoom-variable.png"class="size"></div>
-            <div>Poland Spring</div>
-            <div> Time</div>
+            <div class="name">Poland</div>
+            <div class="name">Spring</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
         </div>
     <div>
             <div class="box"><img  src="https://o.remove.bg/downloads/e96d9608-0c51-43e6-a75c-62e329815433/s-l300-removebg-preview.png"class="size"></div>
-            <div>Deer Park</div>
-            <div> Time</div>
+            <div class="name">Deer Park</div>
+            <div><sup>$</sup><a>3</a><sup>99</sup></div>
+            <div ><a style="color:grey">get it in </a>30min</div>
+            <div><a style="color:grey">at</a> bedford</div>
+            <div style="color:grey">With</div>
             <div>FREE Returns</div>
             <div>& FREE delivery</div>
         </div>
