--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </label>
         <div style="justify-content:center; display:flex" ><img src="logo.svg" alt="" style="width:218px;margin-top: 11px;margin-left: 47px;"></div>
         <ul class="navlinks" style="top: 88px;height: 260rem;">
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
         <li><a href="profile.html">Profile</a></li>
+        <li><a href="about.html">Track order</a></li>
+        <li><a href="contact.html"> your CART</a></li>
         <li><a href="order.html" class="contact">Order now</a></li>
         </ul>
     </nav>
