--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <label for="check" class="menu-btn" >
         <i class="fas fa-bars" ></i>
         </label>
-        <div style="justify-content:center; display:flex" ><img src="logo.svg" alt="" style="width:218px;margin-top: 11px;margin-left: 47px;"></div>
-        <ul class="navlinks" style="top: 88px;height: 260rem;">
+        <div class="toplogo"><img src="logo.svg" alt=""></div>
+        <ul class="navlinks">
         <li><a href="profile.html">Profile</a></li>
         <li><a href="about.html">Track order</a></li>
         <li><a href="contact.html"> your CART</a></li>
@@ -28,13 +28,13 @@
         </ul>
     </nav>
     </header>
-    <main style="background-color:#181818; color:white;font-family: Montserrat, sans-serif;">
+    <main>
         <section class="hero">
             <div class="hero-content">
             <h1 class="titleline">
                 botted water and more, delivered to your door
             </h1>
-        <div class="searchbar"style="margin-left: 16px">
+        <div class="searchbar">
             <buttom><div><img src="noun-project-462.svg" class="locationimg"></div></buttom>
             <input type="text" placeholder="Enter delivery address" class="searcher">
             <buttom><div> <img src="1384651627.svg" style="height: 50px; width: 20px;"></div></buttom>
@@ -42,10 +42,10 @@
         </section>
         <br>
         <br>
-        <span style="display: block; flex: start; margin-left: 4%;font-size:26px;font-weight: bold;"> Water Near You</span>
+        <span class="firstline"> Water Near You</span>
     <br>
     <br>
-        <div style="display:flex;  justify-content:space-around">
+        <div class="block">
         <div>
             <div class="topbox"><img  src="img/ozarka.png" class="size"></div>
             <div><span class="name">Ozarka</span></div>
@@ -67,9 +67,9 @@
             <div>& FREE delivery</div>
             </div>
     </div>
-    <div style="display:flex;  justify-content:space-around">
+    <div class="block">
         <div>
-            <div class="box"><img  src="img/voss.png" style="height:150px; width:150px"></div>
+            <div class="box"><img  src="img/voss.png" class="onefifty"></div>
             <div class="name">Voss</div>
             <div><sup>$</sup><a>3</a><sup>99</sup></div>
             <div ><a style="color:grey">get it in </a>30min</div>
@@ -89,7 +89,7 @@
             <div>& FREE delivery</div>
             </div>
     </div>
-    <div style="display:flex;  justify-content:space-around">
+    <div class="block">
         <div>
             <div class="box"><img  src="img/AQ.png"class="size"></div>
             <div class="name">Aquafina</div>
@@ -111,7 +111,7 @@
             <div>& FREE delivery</div>
             </div>
     </div>
-    <div style="display:flex;  justify-content:space-around">
+    <div class="block">
         <div>
             <div class="box"><img  src="img/CG.png"class="size"></div>
             <div class="name">Crystal  Geyser</div>
@@ -135,10 +135,10 @@
     </div>
     <br>
     <br>
-    <span style="display: block; flex: start; margin-left: 4%;font-size:26px;font-weight: bold;"> Water Jugs Near You</span>
+    <span class="secondline"> Water Jugs Near You</span>
     <br>
     <br>    
-    <div style="display:flex;  justify-content:space-around">
+    <div class="block">
         <div>
             <div class="topbox"><img  src="img/ozarkajug.webp"class="size"></div>
             <div><span class="name">Ozarka</span></div>
@@ -160,7 +160,7 @@
             <div>& FREE delivery</div>
             </div>
     </div>
-    <div style="display:flex;  justify-content:space-around">
+    <div class="block">
         <div>
             <div class="box"><img  src="img/purelifejugs.webp"class="size"></div>
             <div class="name">Pure Life</div>
@@ -185,8 +185,8 @@
     </div>
     <br>
     <br>
-    <span style="display: block; flex: start; margin-left: 4%;font-size:24px;font-weight: bold;    margin-bottom: -18px;font-size: 25px;">Small Bottles Near You</span>
-    <div style="display:flex;  justify-content:space-around">
+    <span class="thirdline">Small Bottles Near You</span>
+    <div class="block">
         <div>
             <div class="box"><img  src="img/purelifesmall.png"class="size"></div>
             <div class="name">Pure life</div>
@@ -208,7 +208,7 @@
             <div>& FREE delivery</div>
             </div>
     </div>
-    <div style="display:flex;  justify-content:space-around">
+    <div class="block">
         <div>
             <div class="box"><img  src="img/polandspringsmall.webp"class="size"></div>
             <div class="name">Poland</div>
