--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Responsive Navbar</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-    <script src="amin.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+<script  src="faq.js"></script>
 </head>
 <body>
     <header >
@@ -233,7 +233,78 @@
     </div>
     <br>
     <br>
-    <div style="justify-content: space-evenly;">FAQ</div>
+    <div class="faq">
+        <div class="container">
+            <h2>FAQ</h2>
+            <div class="accordion">
+              <div class="accordion-item">
+                <button id="accordion-button-1" aria-expanded="false">
+                  <span class="accordion-title">Why is the moon sometimes out during the day?</span>
+                  <span class="icon" aria-hidden="true"></span>
+                </button>
+                <div class="accordion-content">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut.
+                    Ut tortor pretium viverra suspendisse potenti.
+                  </p>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <button id="accordion-button-2" aria-expanded="false">
+                  <span class="accordion-title">Why is the sky blue?</span>
+                  <span class="icon" aria-hidden="true"></span>
+                </button>
+                <div class="accordion-content">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut.
+                    Ut tortor pretium viverra suspendisse potenti.
+                  </p>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <button id="accordion-button-3" aria-expanded="false">
+                  <span class="accordion-title">Will we ever discover aliens?</span>
+                  <span class="icon" aria-hidden="true"></span>
+                </button>
+                <div class="accordion-content">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut.
+                    Ut tortor pretium viverra suspendisse potenti.
+                  </p>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <button id="accordion-button-4" aria-expanded="false">
+                  <span class="accordion-title">How much does the Earth weigh?</span>
+                  <span class="icon" aria-hidden="true"></span>
+                </button>
+                <div class="accordion-content">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut.
+                    Ut tortor pretium viverra suspendisse potenti.
+                  </p>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <button id="accordion-button-5" aria-expanded="false">
+                  <span class="accordion-title">How do airplanes stay up?</span>
+                  <span class="icon" aria-hidden="true"></span>
+                </button>
+                <div class="accordion-content">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut.
+                    Ut tortor pretium viverra suspendisse potenti.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
     </main>
 
 <footer style="background-color:#0C141C; margin-bottom:0">
@@ -269,5 +340,6 @@
 </div>
 <div style="justify-content:center; display:flex"><img src="logo.svg" alt="" style="width:218px"></div>
 </footer>
-</body>
+<script  src="faq.js"></script></body>
+
 </html>
