--- a/faq.html
+++ b/faq.html
@@ -1,85 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FAQ</title>
-    <link rel="stylesheet" href="faq.css" />
-  </head>
-  <body>
-    <div class="container">
-      <h2>FAQ</h2>
-      <div class="accordion">
-        <div class="accordion-item">
-          <button id="accordion-button-1" aria-expanded="false">
-            <span class="accordion-title">Why is the moon sometimes out during the day?</span>
-            <span class="icon" aria-hidden="true"></span>
-          </button>
-          <div class="accordion-content">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut.
-              Ut tortor pretium viverra suspendisse potenti.
-            </p>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <button id="accordion-button-2" aria-expanded="false">
-            <span class="accordion-title">Why is the sky blue?</span>
-            <span class="icon" aria-hidden="true"></span>
-          </button>
-          <div class="accordion-content">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut.
-              Ut tortor pretium viverra suspendisse potenti.
-            </p>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <button id="accordion-button-3" aria-expanded="false">
-            <span class="accordion-title">Will we ever discover aliens?</span>
-            <span class="icon" aria-hidden="true"></span>
-          </button>
-          <div class="accordion-content">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut.
-              Ut tortor pretium viverra suspendisse potenti.
-            </p>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <button id="accordion-button-4" aria-expanded="false">
-            <span class="accordion-title">How much does the Earth weigh?</span>
-            <span class="icon" aria-hidden="true"></span>
-          </button>
-          <div class="accordion-content">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut.
-              Ut tortor pretium viverra suspendisse potenti.
-            </p>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <button id="accordion-button-5" aria-expanded="false">
-            <span class="accordion-title">How do airplanes stay up?</span>
-            <span class="icon" aria-hidden="true"></span>
-          </button>
-          <div class="accordion-content">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut.
-              Ut tortor pretium viverra suspendisse potenti.
-            </p>
-          </div>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="faq.css">
+</head>
+<body>
+  <div class="accordion">
+    <div>
+      <input type="radio" name="example_accordion" id="section1" class="accordion__input">
+      <label for="section1" class="accordion__label">Section #1</label>
+      <div class="accordion__content">
+        <p>Section #1</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sit reiciendis, ipsam quaerat,
+          aperiam perspiciatis ad ullam architecto impedit natus illo nostrum molestias voluptas earum a
+          voluptatibus fugiat fuga facere!
+        </p>
       </div>
     </div>
-    <script src="faq.js"></script>
-  </body>
+    <div>
+      <input type="radio" name="example_accordion" id="section2" class="accordion__input">
+      <label for="section2" class="accordion__label">Section #2</label>
+      <div class="accordion__content">
+        <p>Section #2</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sit reiciendis, ipsam quaerat,
+          aperiam perspiciatis ad ullam architecto impedit natus illo nostrum molestias voluptas earum a
+          voluptatibus fugiat fuga facere!
+        </p>
+      </div>
+    </div>
+    <div>
+      <input type="radio" name="example_accordion" id="section3" class="accordion__input">
+      <label for="section3" class="accordion__label">Section #3</label>
+      <div class="accordion__content">
+        <p>Section #3</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sit reiciendis, ipsam quaerat,
+          aperiam perspiciatis ad ullam architecto impedit natus illo nostrum molestias voluptas earum a
+          voluptatibus fugiat fuga facere!
+        </p>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
-
-
