--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
     </div>
     <br>
     <br>
-    <h1 style="margin-left: 35%;">FAQs</h1>
+    <br>
+    <h1 style="display: flex;justify-content: center;">FAQs</h1>
     <section class="faqs">
       <!-- FAQ Item -->
     <details class="faq_item">
@@ -245,7 +246,7 @@
         <!-- FAQ Item -->
     <details class="faq_item">
       <summary class="faq_title">how long to deliver?</summary>
-      <p class="faq_content">if your live in Hurst, bedford, or Euless, your delivery is going to be 30min or less and if it is more than 30 mins from the moment you placed the order, your order is for free</p>
+      <p class="faq_content">30mins or less if you live in hurst, bedford, or euless, if it arrives in more than 30mins, you are going to pay nothing for the delivery.</p>
     </details>
       <!-- END: FAQ Item -->
       
@@ -255,11 +256,9 @@
       <p class="faq_content">your first order as a custmer is going to be for free, and if you want to make a return it is for free.</p>
     </details>
       <!-- END: FAQ Item -->
-      
+      <br>
+      <br>
       <div class="about">
-        <h2 class="about_content">
-          noserutan.com
-        </h2>
       </div>
     </section>
     </main>
@@ -270,7 +269,7 @@
 <div style="margin-bottom:10px;color: white"> Get to Know Us</div>
 <div style="margin-bottom:5px;color: grey">Who we are</div>
 <div style="margin-bottom:5px;color: grey">Carrers</div>
-<div style="margin-bottom:5px;color: grey">Linkedin</div>
+<div style="margin-bottom:5px;color: grey"><a href="https://www.linkedin.com/in/amin-r-0b9a47229/" target="_blank"style="text-decoration:none;color: grey;">Linkedin</a></div>
 <div style="margin-bottom:5px;color: grey">Glassdoor</div>
 <div style="margin-bottom:5px;color: grey">Accessiblity</div>
 </div>
