--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 <script  src="faq.js"></script>
 </head>
-<body>
+<body style="background-color:#181818">
     <header >
     <nav class="main-nav">
         <input type="checkbox" id="check">
@@ -35,9 +35,9 @@
                 botted water and more, delivered to your door
             </h1>
         <div class="searchbar">
-            <buttom><div><img src="noun-project-462.svg" class="locationimg"></div></buttom>
-            <input type="text" placeholder="Enter delivery address" class="searcher">
-            <buttom><div> <img src="1384651627.svg" style="height: 50px; width: 20px;"></div></buttom>
+            <span><buttom><img src="noun-project-462.svg" class="locationimg"></buttom></span>
+            <span><input type="text" placeholder="Enter delivery address" class="searcher"></span>
+            <span><buttom> <img src="1384651627.svg" style="height: 50px; width: 20px;"></buttom></span>
         </div>
         </section>
         <br>
@@ -265,28 +265,26 @@
 
 <footer style="background-color:#0C141C; margin-bottom:0">
 <b>
-    <div style=" text-align: center; display: block">
-<div style="margin-bottom:10px;color: white"> Get to Know Us</div>
-<div style="margin-bottom:5px;color: grey">Who we are</div>
-<div style="margin-bottom:5px;color: grey">Carrers</div>
-<div style="margin-bottom:5px;color: grey"><a href="https://www.linkedin.com/in/amin-r-0b9a47229/" target="_blank"style="text-decoration:none;color: grey;">Linkedin</a></div>
-<div style="margin-bottom:5px;color: grey">Glassdoor</div>
-<div style="margin-bottom:5px;color: grey">Accessiblity</div>
+    <div style=" text-align: center; display: block; margin-top: 20px;">
+<div class="footertop"> Get to Know Us</div>
+<div class="footer">Who we are</div>
+<div class="footer">Carrers</div>
+<div class="footer"><a href="https://www.linkedin.com/in/amin-r-0b9a47229/" target="_blank"style="text-decoration:none;color: grey;">Linkedin</a></div>
+<div class="footer">Glassdoor</div>
+<div class="footer">Accessiblity</div>
 </div>
 <br>
 <div  style=" text-align: center; display: block">
-<div style="margin-bottom:10px;color: white">Let Us Help You</div>
-<div style="margin-bottom:5px;color: grey ">Account Details</div>
-<div style="margin-bottom:5px;color: grey">Order History</div>
-<div style="margin-bottom:5px;color: grey">Help</div>
+<div class="footertop">Let Us Help You</div>
+<div class="footer">Account Details</div>
+<div class="footer">Order History</div>
+<div class="footer">Help</div>
 </div>
 <br>
 <div  style=" text-align: center; display: block">
-<div style="margin-bottom:6px;color: white">Social Media</div>
+<div class="socialmedia">Social Media</div>
 <div style="display: inline;;color: grey">
-<div ><span><img src="facebook.svg" alt=""style="
-    padding-right: 16px;
-"></span><a href="https://twitter.com/waterdriverinc" target="_blank"><img src="twitter.svg" alt="" style="height:24px; width:24px ;padding-right: 16px;"></a><span><a href="https://www.instagram.com/waterdriverinc/?hl=en" target="_blank"><img src="instagram.svg" alt="" style="height:24px; width:24px"></a></span></div>
+<div ><span><img src="facebook.svg" alt=""class="facebook"></span><a href="https://twitter.com/waterdriverinc" target="_blank"><img src="twitter.svg" alt="" class="twitter"><a><span><a href="https://www.instagram.com/waterdriverinc/?hl=en" target="_blank"><img src="instagram.svg" alt="" class="instagram"></a></span></div>
 </div>
 <br>
 <br>
@@ -294,7 +292,7 @@
 <div style="color: grey;font-size:12px;"><span style="margin-right:27px ;margin-left:11px">Delivery Locations</span> <span style="margin-right:8px ;">© 2022 WaterDriver</span></div>
 </div>
 </div>
-<div style="justify-content:center; display:flex"><img src="logo.svg" alt="" style="width:218px"></div>
+<div class="center"><img src="logo.svg" alt="" style="width:218px"></div>
 </footer>
 <script  src="amin.js"></script>
 </body>
