--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <div class="block">
         <div>
-            <div class="box"><img  src="img/voss.png" class="onefifty"></div>
+            <div class="box"><img  src="img/voss.png" class="size"></div>
             <div class="name">Voss</div>
             <div><sup>$</sup><a>3</a><sup>99</sup></div>
             <div ><a style="color:grey">get it in </a>30min</div>
