--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
       <!-- END: FAQ Item -->
       
         <!-- FAQ Item -->
-    <details class="faq_item" style="margin-bottom: 20px;">
-      <summary class="faq_title">is the first delivery free?</summary>
+    <details class="faq_item">
+      <summary class="faq_title" >is the first delivery free?</summary>
       <p class="faq_content">your first order as a custmer is going to be for free, and if you want to make a return it is for free.</p>
     </details>
       <!-- END: FAQ Item -->
