--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 <script  src="faq.js"></script>
-
 </head>
 <body style="background-color:#181818">
     </script>
     <header >
     <nav class="main-nav">
+        <div>
+        </div>
         <input type="checkbox" id="check">
         <label for="check" class="menu-btn" >
-        <i class="fas fa-bars" ></i>
-        </label>
+            <i class="fas fa-bars" ></i>
+        </label><div>
         <div class="toplogo"><img src="logo.svg" alt=""></div>
-        <label for="">
-            <i><img src="cart.webp" alt="" class="cart" ></i>
-        </label>
+        <div><img src="cart.webp"class="cart" ></div>
+    </div>
         <ul class="navlinks">
         <li><a href="profile.html">Profile</a></li>
         <li><a href="about.html">Track order</a></li>
