--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Navbar</title>
+    <title>WaterDriver</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,8 +22,8 @@
         <label for="check" class="menu-btn" >
             <i class="fas fa-bars" ></i>
         </label><div>
-        <div class="toplogo"><img src="logo.svg" alt=""></div>
-        <div><img src="cart.webp"class="cart" ></div>
+        <div class="toplogo"><img src="img/logo.svg" alt=""></div>
+        <div><img src="img/cart.webp"class="cart" ></div>
     </div>
         <ul class="navlinks">
         <li><a href="profile.html">Profile</a></li>
@@ -271,7 +271,7 @@
 <footer style="background-color:#0C141C; margin-bottom:0">
 <b>
     <div style=" text-align: center; display: block; margin-top: 20px;">
-<div class="footertop"> Get to Know Us</div>
+<div class="footertop"style="border-top: 2rem black;border-top-style: solid;"> Get to Know Us</div>
 <div class="footer">Who we are</div>
 <div class="footer">Carrers</div>
 <div class="footer"><a href="https://www.linkedin.com/in/amin-r-0b9a47229/" target="_blank"style="text-decoration:none;color: grey;">Linkedin</a></div>
@@ -289,7 +289,7 @@
 <div  style=" text-align: center; display: block">
 <div class="socialmedia">Social Media</div>
 <div style="display: inline;;color: grey">
-<div ><span><img src="facebook.svg" alt=""class="facebook"></span><a href="https://twitter.com/waterdriverinc" target="_blank"><img src="twitter.svg" alt="" class="twitter"><a><span><a href="https://www.instagram.com/waterdriverinc/?hl=en" target="_blank"><img src="instagram.svg" alt="" class="instagram"></a></span></div>
+<div ><span><img src="img/facebook.svg" alt=""class="facebook"></span><a href="https://twitter.com/waterdriverinc" target="_blank"><img src="img/twitter.svg" alt="" class="twitter"><a><span><a href="https://www.instagram.com/waterdriverinc/?hl=en" target="_blank"><img src="img/instagram.svg" alt="" class="instagram"></a></span></div>
 </div>
 <br>
 <br>
